# ros2_ws

./: .gitignore  LICENSE  LIDAR_DEPLOYMENT_GUIDE.txt  merge_stair.py  offline_terminal_setup_guide.txt  online_terminal_setup_guide.txt  requirements.txt  setup_ros2.sh  system_check.sh  voxel_comparison.py  voxel_options.py
config/: ply_params.yaml
data/ply/: Stair_1.ply
launch/: configurable_ply_test.launch.py  laptop_performance.launch.py  real_lidar_deployment.launch.py  segmentation_only.launch.py
rviz2/: project.rviz
src/my_terrain_seg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_terrain_seg/config/: stair_vis.rviz
src/my_terrain_seg/launch/: configurable_ply_test.launch.py  offline_test.launch.py  simple_offline_test.launch.py  terrain_seg.launch.py
src/my_terrain_seg/src/my_terrain_seg/my_model_project/: hyperparameters.py  model.py  utils.py
src/my_terrain_seg/src/my_terrain_seg/segmentation_and_octomap/: cloud_logger.py  ply_publisher.py  real_octomap_node.py  segmentation_node.py
training/: dataset.py  loss.py  metrics.py  requirements.txt  train.py
