<?xml version="1.0"?>
<package format="3">
  <name>my_terrain_seg</name>
  <version>0.1.0</version>
  <description>Point‑cloud terrain/stair segmentation with RandLA‑Net and OctoMap integration</description>
  <maintainer email="vincent@example.com">Vincent</maintainer>
  <license>Apache‑2.0</license>

  <!-- buildtool  -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>

  <!-- if you install torch via pip into your environment -->
  <exec_depend>torch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
